--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Private
+partybots/data/parties/
+partybots/data/db/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -161,3 +165,4 @@ cython_debug/
 
 # MacOS
 .DS_Store
+/.DS_Store
