Added an agent that can execute python code.

--- a/backend/agents/OAI_CONFIG_LIST.json
+++ b/backend/agents/OAI_CONFIG_LIST.json
@@ -2,7 +2,7 @@
     {
         "model": "local_model",
         "api_type": "open_ai",
-        "api_base": "http://localhost:1234/v1", 
+        "base_url": "http://localhost:1234/v1",  
         "api_key": "NULL"
     }
 ]
