Fixed the regex, now all three data processing steps are functioning.

--- a/src/pipelines/.fondant/compose.yaml
+++ b/src/pipelines/.fondant/compose.yaml
@@ -7,10 +7,10 @@ services:
     command:
     - --metadata
     - '{"base_path": "/fondant-artifacts", "pipeline_name": "pv_scraper", "run_id":
-      "pv_scraper-20240325145223", "component_id": "extract_pdf_text_component", "cache_key":
+      "pv_scraper-20240326131827", "component_id": "extract_pdf_text_component", "cache_key":
       "6c01fc8b0f706c2054f0168d1dbe731a"}'
     - --output_manifest_path
-    - /fondant-artifacts/pv_scraper/pv_scraper-20240325145223/extract_pdf_text_component/manifest.json
+    - /fondant-artifacts/pv_scraper/pv_scraper-20240326131827/extract_pdf_text_component/manifest.json
     - --cache
     - 'False'
     - --cluster_type
@@ -21,7 +21,7 @@ services:
       links", "consumes": {"Download link href": {"type": "string"}}, "produces":
       {"text": {"type": "string"}}}, "consumes": {}, "produces": {}}'
     - --input_manifest_path
-    - /fondant-artifacts/pv_scraper/pv_scraper-20240325145223/fetchlink_pv_component/manifest.json
+    - /fondant-artifacts/pv_scraper/pv_scraper-20240326131827/fetchlink_pv_component/manifest.json
     depends_on:
       fetchlink_pv_component:
         condition: service_completed_successfully
@@ -44,10 +44,10 @@ services:
     command:
     - --metadata
     - '{"base_path": "/fondant-artifacts", "pipeline_name": "pv_scraper", "run_id":
-      "pv_scraper-20240325145223", "component_id": "fetchlink_pv_component", "cache_key":
+      "pv_scraper-20240326131827", "component_id": "fetchlink_pv_component", "cache_key":
       "5180cf116598af61fd8e03ed290f2a89"}'
     - --output_manifest_path
-    - /fondant-artifacts/pv_scraper/pv_scraper-20240325145223/fetchlink_pv_component/manifest.json
+    - /fondant-artifacts/pv_scraper/pv_scraper-20240326131827/fetchlink_pv_component/manifest.json
     - --link
     - https://www.vlaamsparlement.be/ajax/document-overview?page=0&period=current_year_of_office&current_year_of_office_value=2022-2023&aggregaat%5B%5D=Vraag%20of%20interpellatie&aggregaattype%5B%5D=Schriftelijke%20vraag&thema%5B%5D=Natuur%20en%20Milieu
     - --num_pages
@@ -80,32 +80,31 @@ services:
     - source: /Users/cas/Documents/political_agents/src/pipelines/fondant-artifacts
       target: /fondant-artifacts
       type: bind
-  parlementaire_vragen_structure_text:
+  regex_pv_component:
     build:
       args: []
       context: /Users/cas/Documents/political_agents/src/pipelines/components/scraper_components/regex_pv_component
     command:
     - --metadata
     - '{"base_path": "/fondant-artifacts", "pipeline_name": "pv_scraper", "run_id":
-      "pv_scraper-20240325145223", "component_id": "parlementaire_vragen_structure_text",
-      "cache_key": "2abad51fb4d9bcffada2b53abde167bc"}'
+      "pv_scraper-20240326131827", "component_id": "regex_pv_component", "cache_key":
+      "db19420dacaf016363bfee0e673d1e6f"}'
     - --output_manifest_path
-    - /fondant-artifacts/pv_scraper/pv_scraper-20240325145223/parlementaire_vragen_structure_text/manifest.json
+    - /fondant-artifacts/pv_scraper/pv_scraper-20240326131827/regex_pv_component/manifest.json
     - --cache
     - 'False'
     - --cluster_type
     - default
     - --operation_spec
-    - '{"specification": {"name": "parlementaire_vragen_structure_text", "image":
-      "cascoopman/parlementaire_vragen_structure_text:latest", "description": "This
-      container is responsible for extracting key information from the text of a Parliamentary
-      Question.", "consumes": {"text": {"type": "string"}}, "produces": {"sender":
-      {"type": "string"}, "responder": {"type": "string"}, "questions": {"type": "string"},
-      "answers": {"type": "string"}, "jurisdiction": {"type": "string"}, "topic":
-      {"type": "string"}, "date": {"type": "string"}, "number": {"type": "string"}}},
-      "consumes": {}, "produces": {}}'
+    - '{"specification": {"name": "regex_pv_component", "image": "regex_pv_component:latest",
+      "description": "This container is responsible for extracting key information
+      from the text of a Parliamentary Question.", "consumes": {"text": {"type": "string"}},
+      "produces": {"sender": {"type": "string"}, "responder": {"type": "string"},
+      "questions": {"type": "string"}, "answers": {"type": "string"}, "jurisdiction":
+      {"type": "string"}, "topic": {"type": "string"}, "date": {"type": "string"},
+      "number": {"type": "string"}}}, "consumes": {}, "produces": {}}'
     - --input_manifest_path
-    - /fondant-artifacts/pv_scraper/pv_scraper-20240325145223/extract_pdf_text_component/manifest.json
+    - /fondant-artifacts/pv_scraper/pv_scraper-20240326131827/extract_pdf_text_component/manifest.json
     depends_on:
       extract_pdf_text_component:
         condition: service_completed_successfully
